# Phosphene

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: FindSoxr.cmake  PhospheneConfig.cmake.in
examples/basic/: main.cpp
examples/cube/: main.cpp
examples/hud/: main.cpp
examples/textured_cube/: main.cpp
include/phosphene/: audio.h  display.h  input.h  math3d.h  renderer.h  resampler.h  span.h  window.h
src/: audio.cpp  display.cpp  input.cpp  math3d.cpp  renderer.cpp  resampler.cpp  window.cpp
